github.user.styl
/* ... */
@-moz-document regexp('https?://render\.githubusercontent?.com(/.*)?') {
    :root {
        --bg-1: bg-1
        --bg-2: bg-2
        --bg-5: bg-5
        --fg-1: fg-1
        --fg-3: fg-5
        --v1-5: v1-5 // red
        --v1-6: v1-6
        --v4-5: v4-5 // green
        --v4-6: v4-6
    }

    /// Diff -> Image background.
    .render-shell {
        img[src*='svg']:hover { filter: invert() hue-rotate(180deg) }
        &, /body {
            background-image: none
            c: 0 0 bg1
        }
        img, img.asset { c: 0 bg1 }

        /// Rich diff -> Border/text colors.
        .deleted-frame { c: 0 v15; &::before { c: v16 }}
        .added-frame { c: 0 v45; &::before { c: v46 }}
        .shell p { c: fg3 }

        if (dark(BG)) {
            /// Rich diff -> Invert controls.
            .swipe .swipe-bar,
            .onion-skin .controls > * {
                filter: invert(0.95) brightness(150%)
            }

            /// OpenStreetMap.
            .leaflet {
                &-bar, &-control-layers { c: 0 #ddd }
                &-bar > a:last-child { border-bottom: none }
                &-container { filter: invert(0.95) hue-rotate(180deg) brightness(150%) }
            }
        }
    }

    // Diff -> Images diff bar.
    .render-bar {
        c: 0 bg5 bg2
        li {
            c: fg3 bg5
            &.active {
                c: fg1
                &::before { c: bg5 }
            }
        }
    }
}

